--- a/auth0-acul-samples/vercel.json
+++ b/auth0-acul-samples/vercel.json
@@ -1,22 +1,19 @@
 {
   "version": 2,
-  "name": "acul-project",
   "buildCommand": "cd react-js && npm run build",
   "outputDirectory": "react-js/dist",
   "cleanUrls": true,
   "trailingSlash": false,
-  "routes": [
-    {
-      "src": "/assets/(.*)",
-      "headers": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "handle": "filesystem"
-    }
-  ],
   "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
     {
       "source": "/assets/(.*).js",
       "headers": [
