--- a/.github/workflows/deploy-acul-vercel.yml
+++ b/.github/workflows/deploy-acul-vercel.yml
@@ -28,24 +28,25 @@ jobs:
 
       - name: 📦 Install dependencies
         run: |
-          cd react-js
+          cd auth0-acul-samples/react-js
           npm ci
 
       - name: 🏗️ Build ACUL assets
         run: |
-          cd react-js
+          cd auth0-acul-samples/react-js
           npm run build
 
       - name: 📋 List built assets
         run: |
           echo "Built assets:"
-          ls -lah react-js/dist/assets/
+          ls -lah auth0-acul-samples/react-js/dist/assets/
 
       - name: 🚀 Install Vercel CLI
         run: npm install --global vercel@latest
 
       - name: 🚢 Deploy to Vercel
         id: deploy
+        working-directory: auth0-acul-samples
         run: |
           DEPLOYMENT_URL=$(vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }})
           echo "Deployed to: $DEPLOYMENT_URL"
@@ -56,7 +57,7 @@ jobs:
           AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
           AUTH0_MGMT_TOKEN: ${{ secrets.AUTH0_MGMT_TOKEN }}
           VERCEL_URL: "https://auth0-acul-samples.vercel.app"
-        run: node scripts/update-auth0-vercel.js
+        run: node auth0-acul-samples/scripts/update-auth0-vercel.js
 
       - name: ✅ Deployment Complete
         run: |
