--- a/auth0-acul-samples/vercel.json
+++ b/auth0-acul-samples/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
+  "buildCommand": "npm run build --workspace=react-js",
+  "outputDirectory": "react-js/dist",
+  "installCommand": "npm install --workspace=react-js",
   "cleanUrls": true,
   "trailingSlash": false,
   "headers": [
