--- a/.github/workflows/deploy-acul-vercel.yml
+++ b/.github/workflows/deploy-acul-vercel.yml
@@ -39,13 +39,16 @@ jobs:
           echo "Built assets:"
           ls -lah auth0-acul-samples/react-js/dist/assets/
 
+      - name: 📄 Copy vercel.json to dist folder
+        run: cp auth0-acul-samples/vercel.json auth0-acul-samples/react-js/dist/
+
       - name: 🚀 Install Vercel CLI
         run: npm install --global vercel@latest
 
       - name: 🚢 Deploy to Vercel
         id: deploy
+        working-directory: auth0-acul-samples/react-js/dist
         run: |
-          cd auth0-acul-samples/react-js/dist
           DEPLOYMENT_URL=$(vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }})
           echo "Deployed to: $DEPLOYMENT_URL"
           echo "url=https://auth0-acul-samples.vercel.app" >> $GITHUB_OUTPUT
